# or-tools-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  taskfile.yaml
.cargo/: config.toml
.github/workflows/: build.yaml  lint.yaml  release.yaml  test.yaml
crates/or-tools-rs/: Cargo.toml  build.rs
crates/or-tools-rs/src/: builder.rs  ffi.rs  lib.rs
crates/or-tools-rs/tests/: bool_cst.rs  sat_parameters.rs  tutorial_tests.rs
crates/or-tools-sys/: Cargo.toml  README.md  build.rs
crates/or-tools-sys/src/: lib.rs
tools/clippy-wrapper/: Cargo.toml
tools/clippy-wrapper/src/: main.rs
