[workspace]
resolver = "2"
members = [
    "tools/clippy-wrapper",
    "crates/or-tools-rs",
    "crates/or-tools-sys",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"

[workspace.metadata.cargo-feature-combinations]
exclude_packages = ["clippy-wrapper", "or-tools-sys"]
